# ship

./: README.md  docker-compose.yml  manage.py  pyproject.toml
company/: __init__.py  models.py
company/migrations/: 0001_initial.py
ship/: asgi.py  settings.py  urls.py  wsgi.py
